update title and ILC to CLI

--- a/src/content/docs/fr/reference/cli-reference.mdx
+++ b/src/content/docs/fr/reference/cli-reference.mdx
@@ -1,5 +1,5 @@
 ---
-title: Interface de Ligne de Commande
+title: Lignes de Commandes
 i18nReady: true
 ---
 import Since from '~/components/Since.astro';
@@ -7,11 +7,11 @@ import PackageManagerTabs from '~/components/tabs/PackageManagerTabs.astro'
 
 
 
-Vous pouvez utiliser l'interface de ligne de commande (ILC) fournie par Astro pour développer, construire et prévisualiser votre projet à partir d'une fenêtre de terminal.
+Vous pouvez utiliser l'interface en ligne de commande (CLI) fournie par Astro pour développer, construire et prévisualiser votre projet à partir d'une fenêtre de terminal.
 
-Utilisez l'ILC en exécutant l'une des **commandes** documentées sur cette page, suivie éventuellement de toutes les **options**. Les options personnalisent le comportement d'une commande. Par exemple, pour démarrer le serveur de développement sur le port `8080`, vous combineriez la commande `astro dev` avec l'option `--port` : `astro dev --port 8080`.
+Utilisez le CLI en exécutant l'une des **commandes** documentées sur cette page, suivie éventuellement de toutes les **options**. Les options personnalisent le comportement d'une commande. Par exemple, pour démarrer le serveur de développement sur le port `8080`, vous combineriez la commande `astro dev` avec l'option `--port` : `astro dev --port 8080`.
 
-Dans la plupart des cas, vous utiliserez l'ILC via votre gestionnaire de paquets :
+Dans la plupart des cas, vous utiliserez le CLI via votre gestionnaire de paquets :
 
 <PackageManagerTabs>
   <Fragment slot="npm">
@@ -134,9 +134,9 @@ Lance directement le site web Astro Docs depuis le terminal.
 
 ## `astro telemetry`
 
-Configure la télémétrie pour l'utilisateur actuel de l'ILC. La télémétrie est une donnée anonyme qui fournit à l'équipe Astro des informations sur les fonctionnalités Astro les plus souvent utilisées.
+Configure la télémétrie pour l'utilisateur actuel du CLI. La télémétrie est une donnée anonyme qui fournit à l'équipe Astro des informations sur les fonctionnalités Astro les plus souvent utilisées.
 
-La télémétrie peut être désactivée avec cette commande ILC :
+La télémétrie peut être désactivée avec cette commande CLI :
 
 ```shell
 astro telemetry disable
@@ -182,7 +182,7 @@ astro --config config/astro.config.mjs dev
 
 Configure le [`site`](/fr/reference/configuration-reference/#site) pour votre projet. Utiliser cette option remplacera, si elle existe, la valeur `site` de votre fichier `astro.config.mjs`.
 
-### `--base <pathname>`
+### `--base <chemin>`
 
 <Since v="1.4.1" />
 
@@ -198,7 +198,7 @@ Active les journaux silencieux, ce qui lance le serveur sans aucune sortie dans 
 
 ## Options globales
 
-Utilisez ces options pour obtenir des informations à propos de l'ILC `astro`.
+Utilisez ces options pour obtenir des informations à propos du CLI `astro`.
 
 ### `--version`
 
