--- a/src/content/docs/en/guides/migrate-to-astro/from-nuxtjs.mdx
+++ b/src/content/docs/en/guides/migrate-to-astro/from-nuxtjs.mdx
@@ -335,7 +335,9 @@ In Nuxt, to generate a dynamic page you either must:
 - Use SSR
 - [Use the `generate` function in `nuxt.config.js` to define all possible static routes](https://nuxtjs.org/docs/configuration-glossary/configuration-generate/)
 
-In Astro, you must export a `getStaticPaths` function to tell the framework which routes it is expected to generate for a dynamic page.
+In Astro, you similarly have two choices: you can [use SSR](https://docs.astro.build/en/guides/server-side-rendering/), or you can export a `getStaticPaths` function to tell the framework which routes to generate for a dynamic page.
+
+Let's convert a `generate` function in Nuxt to a `getStaticPaths` function in Astro.
 
 Assuming you have a Nuxt page called `/pages/pokemon/_name.vue` that you want to generate for each Pokémon, you would have the following function in your `nuxt.config.js`:
 
