i18n(zh-cn): Translate tutorial/2-pages/index.mdx

--- a/src/content/docs/zh-cn/tutorial/1-setup/index.mdx
+++ b/src/content/docs/zh-cn/tutorial/1-setup/index.mdx
@@ -3,7 +3,7 @@ type: tutorial
 unitTitle: 构建并部署你的第一个 Astro 网站
 title: '第一单元：前期准备'
 description: >-
-  Tutorial: 创建你的第一个 Astro 博客 —
+  教程：创建你的第一个 Astro 博客 —
 
   准备好开发环境，然后创建并部署你的第一个 Astro 网站
 ---
