mention scoped styles explicitly
Co-authored-by: Dan Jutan <danjutan@gmail.com>

--- a/src/content/docs/en/guides/migrate-to-astro/from-nuxtjs.mdx
+++ b/src/content/docs/en/guides/migrate-to-astro/from-nuxtjs.mdx
@@ -434,7 +434,7 @@ Nuxt utilizes Vue's component styling to generate a page's style.
 </style>
 ```
 
- Similarly, in Astro you can drop in a `<style>` element in your page's template to style the component:
+ Similarly, in Astro you can drop in a `<style>` element in your page's template to provide scoped styles to the component.
 
 ```astro title="src/pages/index.vue"
 ---
