--- a/src/content/docs/en/guides/migrate-to-astro/from-nuxtjs.mdx
+++ b/src/content/docs/en/guides/migrate-to-astro/from-nuxtjs.mdx
@@ -464,7 +464,7 @@ Nuxt utilizes Vue's component styling to generate a page's style.
 
 #### Pre-processor support
 
-[Astro supports the most popular CSS preprocessors right out of the box](/en/guides/styling/#css-preprocessors) by installing them as a dev dependency. For example, to use SCSS you'd run:
+[Astro supports the most popular CSS preprocessors](/en/guides/styling/#css-preprocessors) by installing them as a dev dependency. For example, to use SCSS:
 
 ```shell
 npm install -D sass
