--- a/src/content/docs/zh-cn/reference/cli-reference.mdx
+++ b/src/content/docs/zh-cn/reference/cli-reference.mdx
@@ -116,7 +116,7 @@ import PackageManagerTabs from '~/components/tabs/PackageManagerTabs.astro'
 </p>
 
 :::tip
-运行 `astro dev` 或者 `astro build` 也会运行 `sync`命令。
+运行 `astro dev`，`astro build`或者`astro check`也会运行`sync`命令。
 :::
 
 为所有 Astro 模块生成 TypeScript 类型。这会为类型推断设置一个[`src/env.d.ts`文件](/zh-cn/guides/typescript/#设置)，并为 [内容集合 API](/zh-cn/guides/content-collections/) 定义 `astro:content` 模块。
