--- a/src/content/docs/en/guides/migrate-to-astro/from-nuxtjs.mdx
+++ b/src/content/docs/en/guides/migrate-to-astro/from-nuxtjs.mdx
@@ -339,7 +339,7 @@ In Astro, you similarly have two choices: you can [use SSR](https://docs.astro.b
 
 Let's convert a `generate` function in Nuxt to a `getStaticPaths` function in Astro.
 
-In combination with a Nuxt page `/pages/pokemon/_name.vue`, the following function in `nuxt.config.js` generates a page for each Pokémon:
+The following function in `nuxt.config.js` generates a page for each Pokémon:
 
 ```javascript title="nuxt.config.js"
 {
