--- a/src/content/docs/en/guides/migrate-to-astro/from-nuxtjs.mdx
+++ b/src/content/docs/en/guides/migrate-to-astro/from-nuxtjs.mdx
@@ -332,12 +332,14 @@ import Card from `../../components/Card.astro`;
 
 In Nuxt, to generate a dynamic page you either must:
 
-- Use SSR
-- [Use the `generate` function in `nuxt.config.js` to define all possible static routes](https://nuxtjs.org/docs/configuration-glossary/configuration-generate/)
+- Use SSR.
+- [Use the `generate` function in `nuxt.config.js`](https://nuxtjs.org/docs/configuration-glossary/configuration-generate/) to define all possible static routes.
 
-In Astro, you similarly have two choices: you can [use SSR](https://docs.astro.build/en/guides/server-side-rendering/), or you can export a `getStaticPaths` function to tell the framework which routes to generate for a dynamic page.
+In Astro, you similarly have two choices: 
+- [Use SSR](https://docs.astro.build/en/guides/server-side-rendering/).
+- Export a `getStaticPaths` function in the frontmatter of an Astro page to tell the framework which [static routes to generate dynamically](/en/core-concepts/routing/#dynamic-routes).
 
-Let's convert a `generate` function in Nuxt to a `getStaticPaths` function in Astro.
+#### Convert a `generate` function in Nuxt to a `getStaticPaths` function in Astro.
 
 The following function in `nuxt.config.js` generates a page for each Pokémon:
 
