--- a/src/content/docs/en/guides/migrate-to-astro/from-nuxtjs.mdx
+++ b/src/content/docs/en/guides/migrate-to-astro/from-nuxtjs.mdx
@@ -386,7 +386,7 @@ Nuxt has two methods of fetching server-side data:
 - [`asyncData` options API](https://nuxtjs.org/docs/features/data-fetching/#async-data)
 - [`fetch` hook](https://nuxtjs.org/docs/features/data-fetching/#the-fetch-hook)
 
-In Astro, simply fetch data inside of your page's code fence.
+In Astro, fetch data inside of your page's code fence.
 
 Migrate the following:
 
