also comma, but this time wrong
Co-authored-by: Yan Thomas <61414485+Yan-Thomas@users.noreply.github.com>

--- a/src/content/docs/en/guides/migrate-to-astro/from-gatsby.mdx
+++ b/src/content/docs/en/guides/migrate-to-astro/from-gatsby.mdx
@@ -332,7 +332,7 @@ import rocket from '../images/rocket.svg';
 <img src={rocket} alt="A rocketship in space.">
 ```
 
-Astro's `<Image />` and `<Picture />` components are experimental, and currently work in `.astro` and `.mdx` files only. See a [full list of component attributes](/en/guides/integrations-guide/image/#usage) available for these components, and note that several will differ from Gatsby's attributes.
+Astro's `<Image />` and `<Picture />` components are experimental and currently work in `.astro` and `.mdx` files only. See a [full list of component attributes](/en/guides/integrations-guide/image/#usage) available for these components, and note that several will differ from Gatsby's attributes.
 
 To continue using local images in Markdown (`.md`) files using standard Markdown syntax (`![]()`), move your images into your `public/` folder. You may need to update the link to the relative URL. You can also use the standard `<img>` tag in these files. Note that these [images in `public/` will not be optimized by Astro](/en/guides/images/#public).
 
