It's comma day!
Co-authored-by: Yan Thomas <61414485+Yan-Thomas@users.noreply.github.com>

--- a/src/content/docs/en/guides/migrate-to-astro/from-nextjs.mdx
+++ b/src/content/docs/en/guides/migrate-to-astro/from-nextjs.mdx
@@ -73,7 +73,7 @@ You can pass a `--template` argument to the `create astro` command to start a ne
 Then, copy your existing Next project files over to your new Astro project in a separate folder outside of `src`.
 
 :::tip
-Visit https://astro.new for the full list of official starter templates, and links for opening a new project in StackBlitz, CodeSandbox or Gitpod.
+Visit https://astro.new for the full list of official starter templates, and links for opening a new project in StackBlitz, CodeSandbox, or Gitpod.
 :::
 
 ### Install integrations (optional)
