--- a/src/content/docs/en/guides/migrate-to-astro/from-nuxtjs.mdx
+++ b/src/content/docs/en/guides/migrate-to-astro/from-nuxtjs.mdx
@@ -341,7 +341,7 @@ In Astro, you similarly have two choices:
 
 #### Convert a `generate` function in Nuxt to a `getStaticPaths` function in Astro.
 
-The following function in `nuxt.config.js` generates a page for each Pokémon:
+To generate multiple pages, replace the function to create routes in your `nuxt.config.js` with `getStaticPaths()` directly inside a dynamic routing page itself:
 
 ```javascript title="nuxt.config.js"
 {
@@ -351,16 +351,12 @@ The following function in `nuxt.config.js` generates a page for each Pokémon:
           // Axios is required here unless you're using Node 18
           const res = await axios.get("https://pokeapi.co/api/v2/pokemon?limit=151")
           const pokemons = res.data.results;
-
           return pokemons.map(pokemon => {
             return '/pokemon/' + pokemon.name
           })
         }
       }
 }
-```
-
-This is replaced in Astro with a function that's located within the code block of your page itself:
 
 ```astro title="src/pages/pokemon/[name].astro"
 ---
@@ -372,10 +368,8 @@ export const getStaticPaths = async () => {
       params: { name },
     }))
 }
-
 // ...
 ---
-
 <!-- Your template here -->
 ```
 
