include parentheses getStaticPaths()

--- a/src/content/docs/en/guides/migrate-to-astro/from-nuxtjs.mdx
+++ b/src/content/docs/en/guides/migrate-to-astro/from-nuxtjs.mdx
@@ -337,7 +337,7 @@ In Nuxt, to generate a dynamic page you either must:
 
 In Astro, you similarly have two choices: 
 - [Use SSR](https://docs.astro.build/en/guides/server-side-rendering/).
-- Export a `getStaticPaths` function in the frontmatter of an Astro page to tell the framework which [static routes to generate dynamically](/en/core-concepts/routing/#dynamic-routes).
+- Export a `getStaticPaths()` function in the frontmatter of an Astro page to tell the framework which [static routes to generate dynamically](/en/core-concepts/routing/#dynamic-routes).
 
 #### Convert a `generate` function in Nuxt to a `getStaticPaths` function in Astro.
 
