--- a/src/content/docs/en/guides/migrate-to-astro/from-nuxtjs.mdx
+++ b/src/content/docs/en/guides/migrate-to-astro/from-nuxtjs.mdx
@@ -35,7 +35,7 @@ When you rebuild your Nuxt site in Astro, you will notice some important differe
 
 ## Convert your NuxtJS Project
 
-Each project migration will look different, but there are some common steps to follow when converting from Next.js to Astro. This page will get you started in the right direction.
+Each project migration will look different, but there are some common actions you will perform when converting from Nuxt to Astro.
 
 ### Create a new Astro project
 Use the `create astro` command for your package manager to launch Astro's CLI wizard or choose a community theme from the [Astro Theme Showcase](https://astro.build/themes).
