--- a/src/content/docs/en/guides/migrate-to-astro/from-nuxtjs.mdx
+++ b/src/content/docs/en/guides/migrate-to-astro/from-nuxtjs.mdx
@@ -241,7 +241,7 @@ In Nuxt, your dynamic pages use an underscore to represent a dynamic page proper
 - nuxt.config.js
 </FileTree>
 
-In Astro, we change this underscored dynamic path property (`_name.vue`) to be wrapped in a pair of brackets (`[name].astro`):
+To convert to Astro, change this underscored dynamic path property (e.g. `_name.vue`) to be wrapped in a pair of square brackets (e.g. `[name].astro`):
 
 <FileTree>
 - src/
