--- a/src/content/docs/en/guides/migrate-to-astro/from-nuxtjs.mdx
+++ b/src/content/docs/en/guides/migrate-to-astro/from-nuxtjs.mdx
@@ -506,7 +506,7 @@ In Vue (`.vue`) components within your Astro app, use standard JSX image syntax 
 
 You can learn more about [using images in Astro](/en/guides/images/) in the Images Guide.
 
-## Guided examples: See the steps!
+## Guided example: See the steps!
 
 Here is an example of Nuxt Pokédex data fetch converted to Astro.
 
