Document new getStaticPaths type helpers

--- a/src/content/docs/en/guides/typescript.mdx
+++ b/src/content/docs/en/guides/typescript.mdx
@@ -179,6 +179,56 @@ type MyAttributes = astroHTML.JSX.ImgHTMLAttributes;
 ```
 :::
 
+### getStaticPaths
+
+<Since v="2.1.0" />
+
+Astro includes helpers for working with the types returned in your [getStaticPaths()](/en/reference/api-reference/#getstaticpaths) export for dynamic pages.
+
+To get the type of [params](/en/reference/api-reference/#params) you can do the following:
+
+```astro title="src/pages/posts[...slug].astro" "@components" "@layouts"
+---
+import { InferGetStaticParamsType } from 'astro';
+
+export async function getStaticPaths() {
+  const results = await fetchPosts();
+  return results.map(entry => {
+    return {
+      params: { slug: entry.slug },
+    }
+  });
+}
+
+type Params = InferGetStaticParamsType<typeof getStaticPaths>;
+//   ^? { slug: string; }
+---
+```
+
+Likewise, to get the [props](/en/reference/api-reference/#astroprops) for the page, use the `InferGetStaticPropsType` type function:
+
+```astro title="src/pages/posts[...slug].astro" "@components" "@layouts"
+---
+import { InferGetStaticPropsType } from 'astro';
+
+export async function getStaticPaths() {
+  const results = await fetchPosts();
+  return results.map(entry => {
+    return {
+      params: { slug: entry.slug },
+      props: {
+        propA: true,
+        propB: 22
+      }
+    }
+  });
+}
+
+type Props = InferGetStaticPropsType<typeof getStaticPaths>;
+// ^? { propA: boolean; propB: number; }
+---
+```
+
 ## Type checking
 
 To see type errors in your editor, please make sure that you have the [Astro VS Code extension](/en/editor-setup/) installed. Please note that the `astro start` and `astro build` commands will transpile the code with esbuild, but will not run any type checking. To prevent your code from building if it contains TypeScript errors, change your "build" script in `package.json` to the following:
