--- a/src/content/docs/fr/reference/cli-reference.mdx
+++ b/src/content/docs/fr/reference/cli-reference.mdx
@@ -61,7 +61,7 @@ Lance le serveur de développement d'Astro. Il s'agit d'un serveur HTTP local qu
 
 <h3>Options</h3>
 
-Utilisez ces options pour personnaliser le comportement du serveur de développement d'Astro. Pour les options partagées avec d'autres commandes Astro, voir [options courantes](#options-courantes) ci-dessous.
+Utilisez ces options pour personnaliser le comportement du serveur de développement d'Astro. Pour les options partagées avec d'autres commandes Astro, voir les [options courantes](#options-courantes) ci-dessous.
 
 #### `--port <nombre>`
 
@@ -69,13 +69,13 @@ Spécifie le port sur lequel se démarrer. Il est défini par défaut sur `3000`
 
 #### `--host [adresse IP facultative]`
 
-Définit les adresses IP réseau sur lesquelles le serveur de développement doit écouter (c'est-à-dire les adresses IP autres que localhost). Cela peut être utile pour tester votre projet sur des périphériques locaux tels qu'un téléphone portable pendant le développement.
+Définit les adresses IP réseau sur lesquelles le serveur de développement doit écouter (c'est-à-dire les adresses IP autres que localhost). Cela peut être utile pour tester votre projet durant le développement sur des périphériques locaux tels qu'un téléphone portable.
 
-- `--host` — écouter sur toutes les adresses, y compris les adresses LAN et publiques
+- `--host` — écoute sur toutes les adresses, y compris les adresses LAN et publiques
 - `--host <adresse-personnalisée>` — expose une adresse IP réseau à `<adresse-personnalisée>`
 
 :::caution
-Ne pas utiliser l'option `--host` pour exposer le serveur de développement à un environnement de production. Le serveur de développement est conçu pour une utilisation locale pendant le développement de votre site uniquement.
+N'utilisez pas l'option `--host` pour exposer le serveur de développement à un environnement de production. Le serveur de développement est conçu pour une utilisation locale durant le développement de votre site uniquement.
 :::
 
 ## `astro build`
@@ -122,7 +122,7 @@ Cette commande ne vérifie les types que dans les fichiers `.astro`.
 Exécuter `astro dev`, `astro build` ou `astro check` exécutera également la commande `sync`.
 :::
 
-Génère des types TypeScript pour tous les modules Astro. Cela configure un [fichier `src/env.d.ts`](/fr/guides/typescript/#mise-en-place) pour l'inférence de type et définit le module `astro:content` pour l'[API de Collections de Contenu](/fr/guides/content-collections/).
+Génère des types TypeScript pour tous les modules Astro. Cela configure un [fichier `src/env.d.ts`](/fr/guides/typescript/#mise-en-place) pour l'inférence de type et définit le module `astro:content` pour [l'API de Collections de Contenu](/fr/guides/content-collections/).
 
 ## `astro add`
 
@@ -154,7 +154,7 @@ La commande `clear` réinitialise les données de télémétrie :
 astro telemetry clear
 ```
 
-:::tip [Vous voulez désactiver la télémétrie dans des environnements IC ?]
+:::tip[Vous souhaitez désactiver la télémétrie dans les environnements IC ?]
 Ajoutez la commande `astro telemetry disable` à vos scripts IC ou définissez la variable d'environnement `ASTRO_TELEMETRY_DISABLED`.
 :::
 
@@ -172,7 +172,7 @@ astro --root monDossierRacine/monDossierProjet dev
 
 ### `--config <chemin>`
 
-Spécifie le chemin du fichier de configuration par rapport à la racine du projet. Il est défini par défaut à `astro.config.mjs`. Utilisez cette options si vous utilisez un nom différent pour votre fichier de configuration ou si votre fichier de configuration est dans un autre dossier.
+Spécifie le chemin du fichier de configuration par rapport à la racine du projet. Il est défini par défaut à `astro.config.mjs`. Utilisez cette option si vous utilisez un nom différent pour votre fichier de configuration ou si votre fichier de configuration est dans un autre dossier.
 
 ```shell
 astro --config config/astro.config.mjs dev
@@ -186,7 +186,7 @@ Configure le [`site`](/fr/reference/configuration-reference/#site) pour votre pr
 
 <Since v="1.4.1" />
 
-Configure la [`base`](/fr/reference/configuration-reference/#base) pour votre projet. Passer cette option remplacera, si elle existe, la valeur `base` de votre fichier `astro.config.mjs`.
+Configure la [`base`](/fr/reference/configuration-reference/#base) de votre projet. Utiliser cette option remplacera, si elle existe, la valeur `base` de votre fichier `astro.config.mjs`.
 
 ### `--verbose`
 
