--- a/src/content/docs/en/guides/fonts.mdx
+++ b/src/content/docs/en/guides/fonts.mdx
@@ -12,10 +12,10 @@ This guide will show you how to add web fonts to your project and use them in yo
 
 ## Using a local font file
 
-Let's imagine you have a `DistantGalaxy.woff` font file.
+This example will demonstrate adding a custom font using the font file `DistantGalaxy.woff`.
 
 1. Add your font file to `public/fonts/`.
-1. Add an `@font-face` statement to your CSS. This could be in a global `.css` file you import, a `<style is:global>` block, or a `<style>` block in a specific layout or component where you want to use this font.
+1. Add the following `@font-face` statement to your CSS. This could be in a global `.css` file you import, a `<style is:global>` block, or a `<style>` block in a specific layout or component where you want to use this font.
 
     ```css
     /* Register your custom font family and tell the browser where to find it. */
@@ -53,7 +53,7 @@ Let's imagine you have a `DistantGalaxy.woff` font file.
 
 The [Fontsource](https://fontsource.org/) project simplifies using Google Fonts and other open source fonts. It provides npm modules you can install for the fonts you want to use.
 
-1. Find the font you want to use in [Fontsource's catalog](https://fontsource.org/fonts). For this example, we'll use [Twinkle Star](https://fontsource.org/fonts/twinkle-star).
+1. Find the font you want to use in [Fontsource's catalog](https://fontsource.org/fonts). This example will use [Twinkle Star](https://fontsource.org/fonts/twinkle-star).
 1. Install the package for your chosen font.
 
     <PackageManagerTabs>
@@ -78,7 +78,7 @@ The [Fontsource](https://fontsource.org/) project simplifies using Google Fonts 
     You'll find the correct package name in the “Quick Installation” section of each font page on Fontsource's website. It will start with `@fontsource/` followed by the name of the font.
     :::
 
-1. Import the font package in the layout or component where you want to use the font. Usually, you will want to do this in a common layout component to make sure the font is available across your site.
+1. Import the font package in the component where you want to use the font. Usually, you will want to do this in a common layout component to make sure the font is available across your site.
 
     The import will automatically add the necessary `@font-face` rules needed to set up the font.
 
@@ -88,7 +88,7 @@ The [Fontsource](https://fontsource.org/) project simplifies using Google Fonts 
     ---
     ```
 
-1. Use the `font-family` as shown on that font's Fontsource page. This will work anywhere you can write CSS in your Astro project.
+1. Use the font's name as shown in the `body` example on its Fontsource page as the `font-family` value. This will work anywhere you can write CSS in your Astro project.
 
     ```css
     h1 {
@@ -98,11 +98,7 @@ The [Fontsource](https://fontsource.org/) project simplifies using Google Fonts 
 
 ## Register fonts in Tailwind
 
-If you are using the [Tailwind integration](/en/guides/integrations-guide/tailwind/), you can either add an [`@font-face` statement for a local font](#using-a-local-font-file) or use [Fontsource's `import` strategy](#using-fontsource) to install your font.
-
-:::note
-Make yourself familiar with the mentioned strategies before proceeding with the following steps.
-:::
+If you are using the [Tailwind integration](/en/guides/integrations-guide/tailwind/), you can use either of the previous methods on this page to install your font, with some modification. You can either add an [`@font-face` statement for a local font](#using-a-local-font-file) or use [Fontsource's `import` strategy](#using-fontsource) to install your font.
 
 To register your font in Tailwind:
 
