Add Docker guide

--- a/src/content/docs/en/guides/deploy/docker.mdx
+++ b/src/content/docs/en/guides/deploy/docker.mdx
@@ -87,6 +87,8 @@ COPY ./nginx/nginx.conf /etc/nginx/nginx.conf
 COPY --from=build /app/dist /usr/share/nginx/html
 ```
 
+Before you can actually build the Dockerfile above, you'll need to create a configuration file for NGINX. Create a folder called `nginx` in your project's root directory and create a file called `nginx.conf` in it.
+
 ```nginx title="nginx.conf"
 worker_processes  1;
 
@@ -117,7 +119,23 @@ http {
 
 ## Building container
 
+Building your container is as easy as running the following command in your project's root directory:
+
+```bash
+docker build -t <your-astro-image-name> .
+```
+
+This will output a container, which you can run locally or deploy to a platform of your choice.
+
 ## Running locally
+
+To run your container locally, you can use the following command:
+
+```bash
+docker run -p <local-port>:<container-port> <your-astro-image-name>
+```
+
+Now you should be able to access your site at `http://localhost:<local-port>`.
 
 ## Deployment
 
