add descriptive link

--- a/src/content/docs/en/guides/deploy/docker.mdx
+++ b/src/content/docs/en/guides/deploy/docker.mdx
@@ -15,7 +15,7 @@ There are many different ways to build your Astro site, which all are valid. The
 
 ## General requirements
 
-1. To use Docker, you'll have to install docker on your local machine. You can find installation instructions for your operating system [here](<https://docs.docker.com/get-docker/>).
+1. To use Docker, you'll have to install docker on your local machine. You can find [installation instructions for your operating system here](<https://docs.docker.com/get-docker/>).
 2. You'll need a `Dockerfile` in your project. This file contains the instructions to build your site. You can find [more information about Dockerfiles here](<https://docs.docker.com/engine/reference/builder/>).
 
 ## Creating container in `Dockerfile`
