build forms with api routes - 3 steps, examples for 5 frameworks

--- a/src/content/docs/en/recipes/build-forms.mdx
+++ b/src/content/docs/en/recipes/build-forms.mdx
@@ -1,6 +1,6 @@
 ---
-title: Handle Forms With Astro Pages
-description: Learn how to build HTML forms and handle submissions with zero JavaScript
+title: Build 0JS Forms With Astro Pages
+description: Learn how to build HTML forms and handle submissions in your frontmatter
 i18nReady: false
 type: recipe
 ---
@@ -17,7 +17,7 @@ In SSR mode, Astro pages can both display and handle forms. In this recipe, you'
     <h1>Register</h1>
     ```
 
-2. Add a `<form>` tag with some inputs to the page. Each input should have a `name` attribute that describes the value of that input. Be sure to add a `<button>` element, which submits the form.
+2. Add a `<form>` tag with some inputs to the page. Each input should have a `name` attribute that describes the value of that input. Be sure to add a `<button>` or `<input type="submit">` element to submit the form.
 
     ```astro title="src/pages/register.astro"
     ---
