--- a/src/content/docs/en/guides/fonts.mdx
+++ b/src/content/docs/en/guides/fonts.mdx
@@ -47,7 +47,7 @@ This example will demonstrate adding a custom font using the font file `DistantG
 
 ## Using Fontsource
 
-The [Fontsource](https://fontsource.org/) project simplifies using Google Fonts and other open source fonts. It provides npm modules you can install for the fonts you want to use.
+The [Fontsource](https://fontsource.org/) project simplifies using Google Fonts and other open-source fonts. It provides npm modules you can install for the fonts you want to use.
 
 1. Find the font you want to use in [Fontsource's catalog](https://fontsource.org/fonts). This example will use [Twinkle Star](https://fontsource.org/fonts/twinkle-star).
 1. Install the package for your chosen font.
