--- a/src/pages/en/core-concepts/astro-components.mdx
+++ b/src/pages/en/core-concepts/astro-components.mdx
@@ -116,7 +116,7 @@ You're not limited to just Astro components though. You can also include **JavaS
 You can define local JavaScript variables inside of the frontmatter component script within an Astro component. You can then inject these variables into the component's HTML template using JSX-like expressions!
 
 :::note[dynamic vs reactive]
-Using this approach, you can include **dynamic** values that are calculated in the frontmatter. But once included, these values are not **reactive** and will never change. Astro components are templates that only run during the rendering step.
+Using this approach, you can include **dynamic** values that are calculated in the frontmatter. But once included, these values are not **reactive** and will never change. Astro components are templates that only run once, at build time.
 
 See below for more examples of [differences between Astro and JSX](#differences-between-astro-and-jsx).
 :::
