incorporated changes from 2404 into Astro Components

--- a/src/content/docs/en/core-concepts/astro-components.mdx
+++ b/src/content/docs/en/core-concepts/astro-components.mdx
@@ -8,7 +8,7 @@ i18nReady: true
 
 Astro components are extremely flexible. Often, an Astro component will contain some **reusable UI on the page**, like a header or a profile card. At other times, an Astro component may contain a smaller snippet of HTML, like a collection of common `<meta>` tags that make SEO easy to work with. Astro components can even contain an entire page layout.
 
-The most important thing to know about Astro components is that they **render to HTML during your build.** Even if you run JavaScript code inside of your components, it will all run ahead of time, stripped from the final page that you send to your users. The result is a faster site, with zero JavaScript footprint added by default.
+The most important thing to know about Astro components is that they **don't render on the client**. They render to HTML either at build-time or on-demand using [server-side rendering (SSR)](/en/guides/server-side-rendering/). You can include JavaScript code inside of your component frontmatter, and all of it will be stripped from the final page sent to your users' browsers. The result is a faster site, with zero JavaScript footprint added by default.
 
 
 ## Component Structure
@@ -61,7 +61,7 @@ Below the component script, sits the component template. The component template 
 
 If you write plain HTML here, your component will render that HTML in any Astro page it is imported and used.
 
-However, [Astro's component template syntax](/en/core-concepts/astro-syntax/) also supports **JavaScript expressions**, **imported components** and [**special Astro directives**](/en/reference/directives-reference/). Data and values defined (at page build time) in the component script can be used in the component template to produce dynamically-created HTML.
+However, [Astro's component template syntax](/en/core-concepts/astro-syntax/) also supports **JavaScript expressions**, **imported components** and [**special Astro directives**](/en/reference/directives-reference/). Data and values defined (during rendering) in the component script can be used in the component template to produce dynamically-created HTML.
 
 ```astro title="src/components/MyFavoritePokemon.astro"
 ---
