--- a/src/content/docs/en/core-concepts/astro-components.mdx
+++ b/src/content/docs/en/core-concepts/astro-components.mdx
@@ -66,17 +66,21 @@ However, [Astro's component template syntax](/en/core-concepts/astro-syntax/) al
 ```astro title="src/components/MyFavoritePokemon.astro"
 ---
 // Your component script here!
+import Banner from '../components/Banner.astro';
 import ReactPokemonComponent from '../components/ReactPokemonComponent.jsx';
 const myFavoritePokemon = [/* ... */];
+const { title } = Astro.props;
 ---
 <!-- HTML comments supported! -->
+{/* JS comment syntax is also valid! */}
 
+<Banner />
 <h1>Hello, world!</h1>
 
 <!-- Use props and other variables from the component script: -->
-<p>My favorite pokemon is: {Astro.props.title}</p>
+<p>{title}</p>
 
-<!-- Include other components with a `client:` directive to hydrate: -->
+<!-- Include other UI framework components with a `client:` directive to hydrate: -->
 <ReactPokemonComponent client:visible />
 
 <!-- Mix HTML with JavaScript expressions, similar to JSX: -->
