Removed www. from https link
This caused privacy error in Chrome browsers when trying to open the link.

Your connection is not private
Attackers might be trying to steal your information from www.tina.io (for example, passwords, messages or credit cards). Learn more
NET::ERR_CERT_AUTHORITY_INVALID

--- a/src/content/docs/en/guides/cms/tina-cms.mdx
+++ b/src/content/docs/en/guides/cms/tina-cms.mdx
@@ -7,7 +7,7 @@ service: Tina CMS
 ---
 import PackageManagerTabs from '~/components/tabs/PackageManagerTabs.astro'
 
-[Tina CMS](https://www.tina.io/) is a Git-backed headless content management system.
+[Tina CMS](https://tina.io/) is a Git-backed headless content management system.
 
 ## Integrating with Astro
 
