code snippet update

--- a/src/content/docs/en/guides/content-collections.mdx
+++ b/src/content/docs/en/guides/content-collections.mdx
@@ -396,13 +396,20 @@ If you are building a dynamic website (using Astro's SSR support), you are not e
 
 ```astro
 ---
-// src/pages/posts/[...slug].astro
 import { getEntryBySlug } from 'astro:content';
 // 1. Get the slug from the incoming server request
 const { slug } = Astro.params;
-// 2. Query for the entry directly using the request slug
+// 2. check if the slug identifier matches the filename
+if (slug === undefined) {
+    throw new Error("slug/filename mismatch");
+}
+// 3. Query for the entry directly using the request slug
 const entry = await getEntryBySlug('blog', slug);
-// 3. (Optional) render the entry to HTML in the template
+// 4. redirect if the entry does not exist
+if (entry === undefined) {
+    return Astro.redirect("/404");
+}
+// 5. (Optional) render the entry to HTML in the template
 const { Content } = await entry.render();
 ---
 <h1>{entry.data.title}</h1>
