Adding a note about style objects
Discord thread link: https://discordapp.com/channels/830184174198718474/1075913546883407972

--- a/src/content/docs/en/guides/styling.mdx
+++ b/src/content/docs/en/guides/styling.mdx
@@ -148,6 +148,11 @@ This pattern lets you style child components directly. Astro will pass the paren
 Because the `class` prop includes the child in its parent’s scope, it is possible for styles to cascade from parent to child. To avoid this having unintended side effects, ensure you use unique class names in the child component.
 :::
 
+### Style objects can be used inline instead of strings
+
+When styling components in Astro, you may use inline style objects. For example: `<div  style={{ '--cssVariable': 'brown' }} >`
+
+When you run Astro , this will be transformed into the following: `<div style="--css-variable:brown" class="astro-J7PV25F6">`
 
 ## External Styles
 
