--- a/src/content/docs/en/recipes/build-forms-api.mdx
+++ b/src/content/docs/en/recipes/build-forms-api.mdx
@@ -5,12 +5,17 @@ i18nReady: false
 type: recipe
 ---
 import UIFrameworkTabs from "~/components/tabs/UIFrameworkTabs.astro";
+import PackageManagerTabs from "~/components/tabs/PackageManagerTabs.astro"
 
 An HTML form causes the browser to refresh the page or navigate to a new one. To send form data to an API endpoint instead, you must intercept the form submission using JavaScript. This recipe shows you how to send form data to an API endpoint and handle that data.
 
+## Prerequisites
+- A project with [SSR](/en/guides/server-side-rendering/) (`output: 'server'`) enabled
+- A [UI Framework integration](/en/core-concepts/framework-components/) installed
+
 ## Recipe
 
-1. Create a form component using your frontend framework of choice. Each input should have a `name` attribute that describes the value of that input. Be sure to add a `<button>` or `<input type="submit">` element to submit the form.
+1. Create a form component using your UI framework. Each input should have a `name` attribute that describes the value of that input. Be sure to add a `<button>` or `<input type="submit">` element to submit the form.
     <UIFrameworkTabs>
       <Fragment slot="preact">
         ```tsx title="src/components/FeedbackForm.tsx"
@@ -356,10 +361,28 @@ An HTML form causes the browser to refresh the page or navigate to a new one. To
 
     </UIFrameworkTabs>
 
-### Extension: Use Zod to validate your form
+{/* ## Extension: Use Zod to validate your form
 
 [Zod form data](https://www.npmjs.com/package/zod-form-data) builds on top of [Zod](https://github.com/colinhacks/zod) to validate your form using a schema. This simplifies your code, as it allows you to declare the fields and their requirements, and let Zod handle the validation.
 
-Declare your schema using `zfd.formData`.
+1. Install `zod` and `zod-form-data`.
 
-IN PROGRESS
+    <PackageManagerTabs>
+      <Fragment slot="npm">
+        ```shell
+          npm i zod zod-form-data
+        ```
+      </Fragment>
+      <Fragment slot="pnpm">
+        ```shell
+          pnpm i zod zod-form-data
+        ```
+      </Fragment>
+      <Fragment slot="yarn">
+        ```shell
+          yarn add zod zod-form-data
+        ```
+      </Fragment>
+    </PackageManagerTabs>
+
+2. In your API Route file, declare your schema using `zfd.formData` and export it. */}
