--- a/src/content/docs/en/recipes/captcha.mdx
+++ b/src/content/docs/en/recipes/captcha.mdx
@@ -9,6 +9,9 @@ type: recipe
 
 In this recipe, an API route is used to verify Google reCAPTCHA v3 without exposing the secret to clients.
 
+## Prerequisites
+- A project with [SSR](/en/guides/server-side-rendering/) (`output: 'server'`) enabled
+
 ## Recipe
 
 1. Create a `post` endpoint that accepts recaptcha data, then verifies it with reCAPTCHA's API. Here, you can safely define secret values or read environment variables.
