yaml -> vite or rollup

--- a/src/content/docs/en/recipes/add-yaml-support.mdx
+++ b/src/content/docs/en/recipes/add-yaml-support.mdx
@@ -1,11 +1,13 @@
 ---
-title: Add YAML Support
-description: Learn how you can import YAML data in your projects by extending file-type support in Astro.
+title: Installing a Vite or Rollup plugin
+description: Learn how you can import YAML data by adding a Rollup plugin to your project.
 i18nReady: false
 type: recipe
 ---
 
-The YAML (`.yml`) data format isn't natively supported by Astro, but you can add support for it by using a compatible Rollup plugin like [`@rollup/plugin-yaml`](https://www.npmjs.com/package/@rollup/plugin-yaml):
+Astro builds on top of Vite, and supports both Vite and Rollup plugins. This recipe uses a Rollup plugin to add the ability to import a YAML (`.yml`) file in Astro.
+
+## Recipe
 
 1. Install `@rollup/plugin-yaml`:
 
